force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/SentinelFlow_Dashboard_Event__e.object-meta.xml
<CustomObject>
    <description>Real-time streaming event emitted when SentinelFlow incident state changes. Powers dashboard live-refresh and reduces polling overhead.</description>
    <label>SentinelFlow Dashboard Event</label>
    <pluralLabel>SentinelFlow Dashboard Events</pluralLabel>
</CustomObject>