force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <label>AI Confidence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>