force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/AI_Reasoning_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Reasoning_Status__c</fullName>
    <label>AI Reasoning Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>