force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>