force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>