force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Event_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Source__c</fullName>
    <label>Event Source</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>