force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <label>Event Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>