force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>