force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Execution_Status__c</fullName>
    <label>Execution Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>