force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Incident_Id__c.field-meta.xml
<CustomField>
    <fullName>Incident_Id__c</fullName>
    <label>Incident ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>