force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>Incident_Number__c</fullName>
    <label>Incident Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>