force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>