force-app/main/default/objects/SentinelFlow_Dashboard_Event__e/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>